Opened 15 years ago

Closed 10 years ago

Last modified 4 weeks ago

#3149 closed bug (fixed)

Intel Extreme Driver Does Not Work With 945G - GMA950

Reported by: tonestone57 Owned by: axeld
Priority: normal Milestone: R1/beta2
Component: Drivers/Graphics/intel_extreme Version: R1/Development
Keywords: Cc: umccullough, scorps@…
Blocked By: #7662 Blocking: #2540, #3464, #5530, #5944
Platform: x86

Description

Haiku freezes when loading the Intel video driver and does not boot. I checked the vendor id and my video card should be supported by the driver.

Seems to mention an error with PLL. Required 25.17 : Found 25.1429 Mhz. Will attach screenshot & syslog.

From listdev:

device Display controller (VGA compatible controller, VGA controller) [3|0|0]
  vendor 8086: Intel Corporation
  device 2772: 82945G/GZ Integrated Graphics Controller

Attachments (4)

P1010003.JPG (175.4 KB ) - added by tonestone57 15 years ago.
PLL-limits
syslog (140.8 KB ) - added by tonestone57 15 years ago.
syslog
syslog.15 (41.3 KB ) - added by siarzhuk 15 years ago.
Same problem on different PC
r37003_extreme_bug.jpg (179.5 KB ) - added by Michael S. 14 years ago.
hrev37003 KDL on booting

Download all attachments as: .zip

Change History (31)

by tonestone57, 15 years ago

Attachment: P1010003.JPG added

PLL-limits

by tonestone57, 15 years ago

Attachment: syslog added

syslog

comment:1 by siarzhuk, 15 years ago

Just a bit of additional debug info acquired on the same hardware:

PLL limits, min: p 5 (p1 1, p2 10), n 5, m 70 (m1 12, m2 7) PLL limits, max: p 80 (p1 8, p2 5), n 10, m 120 (m1 22, m2 11) required MHz: 108 found: 107.755 MHz, p = 14 (p1 = 1, p2 = 14), n = 7, m = 110 (m1 = 20, m2 = 10) PLL limits, min: p 5 (p1 1, p2 10), n 5, m 70 (m1 12, m2 7) PLL limits, max: p 80 (p1 8, p2 5), n 10, m 120 (m1 22, m2 11) required MHz: 108 found: 107.52 MHz, p = 20 (p1 = 2, p2 = 10), n = 5, m = 112 (m1 = 21, m2 = 7)

Complete syslog.15 is attached.

by siarzhuk, 15 years ago

Attachment: syslog.15 added

Same problem on different PC

comment:2 by axeld, 15 years ago

Blocking: 2540 added

(In #2540) Okay, thanks for the note!

comment:3 by zaunpfahl, 15 years ago

Confirmed with 945GT, Abit iL-90mv. Save mode works.

comment:4 by tonestone57, 15 years ago

EXTRA INFO:

I noticed two things of interest while looking over David's similar issue on mailing list http://www.freelists.org/post/haiku-development/Asus-Eee-PC-B202,20

Refer to my screenshot. 1) You will notice that p2 is out of range on the first attempt. X Org driver has updated p2 values to 14 and 7. 2nd attempt uses changed PLL limits which correspond with driver but fails to boot ( black screen ). 2) My frequency is ~25 Mhz whereas siarzhuk & David both get ~108 Mhz. Is my frequency being divided by 4? ie: should it not be 100 Mhz instead?

comment:5 by tonestone57, 15 years ago

Blocking: 3464 added

(In #3464) Fairly sure this bug is a duplicate of (#3149)

comment:6 by tonestone57, 15 years ago

Summary: Intel Video Driver Does Not Work With 945GIntel Extreme Driver Does Not Work With 945G - GMA950

comment:7 by axeld, 14 years ago

Blocking: 5530 added

(In #5530) Nice to look up the old duplicates - but it certainly doesn't make sense to add another one.

comment:8 by axeld, 14 years ago

Blocking: 4240 added

comment:7 by axeld, 14 years ago

Blocking: 3464, 4240, 5530 removed
Version: R1/pre-alpha1R1/Development

comment:8 by axeld, 14 years ago

Blocking: 3464 added

comment:11 by umccullough, 14 years ago

Cc: umccullough added

comment:12 by axeld, 14 years ago

Blocking: 5530 added

I am not able/willing to fix this bug without having access to the hardware.

comment:13 by tonestone57, 14 years ago

I have not checked any changes you may have done to intel_extreme driver for very long time. I will try to test again within next 3 weeks and update ticket information. Please wait for my update first!

Germany is too far to send you my hardware. :-)

This is from Intel (manufacturer & chipset) ATOM 330 desktop board. Since lots of people are having issue with this driver & on-board video (I think from this particular mobo - with later version of i945 graphics card), maybe you can get Haiku Inc. to pay to get you this motherboard ($100-$120)? Or maybe there is someone you know with ATOM 330 board (or similar mobo with this issue) that could lend it to you?

in reply to:  12 comment:14 by Michael S., 14 years ago

Replying to axeld:

I am not able/willing to fix this bug without having access to the hardware.

I buy on ebay MOBO with the necessary integrated videocard and I specify you quality of the buyer. Such variant will approach?

P.S. The bug #5530 has been created to pay attention to this small group of bugs.

comment:15 by Michael S., 14 years ago

Cc: scorps@… added

comment:16 by luroh, 14 years ago

Blocking: 5944 added

comment:17 by axeld, 14 years ago

It seems like there are two different issues with this hardware; there was a possible hang if the hardware detected an enabled head B without a LVDS panel. This one issue has been fixed in hrev36941. This should allow some of the affected system/monitor combinations to work now.

in reply to:  17 comment:18 by Michael S., 14 years ago

Many thanks! With D-Sub-VGA TFT-matrix driver works now.

comment:19 by tonestone57, 14 years ago

Thank you Axel. D-Sub VGA on LCD monitor works with Intel Extreme driver now. Tested with hrev36941.

~> listimage | grep accelerant
  793        /boot/system/add-ons/accelerants/intel_extreme.accelerant 0x8d8000 0x8e4000    0          0
TEAM 3291 (/bin/grep accelerant):

by Michael S., 14 years ago

Attachment: r37003_extreme_bug.jpg added

hrev37003 KDL on booting

comment:20 by mr.Noisy, 14 years ago

GCC4 build hrev37641 doesn't work. GCC2 hrev37739 just fine.

Last edited 14 years ago by mr.Noisy (previous) (diff)

comment:21 by umccullough, 13 years ago

What combination exactly is still broken here? LVDS/DVI output?

I seem to recall that my particular Atom 330 box with this chipset does work now with analog VGA (it didn't have DVI output).

comment:22 by scottmc, 13 years ago

Blocking: 7662 added

comment:23 by umccullough, 12 years ago

Please retest - I suspect this issue may have since been resolved. I'll give it a few more months, then probably close it since a lot of changes have been made to the intel_extreme driver in 3 years.

comment:24 by gordonjcp, 10 years ago

this may be fixed by #10271 ?

comment:25 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Enough months have passed anyway :)

Please open new tickets with updated information if there are still problems.

comment:26 by waddlesplash, 5 years ago

Blocked By: 7662 added
Blocking: 7662 removed

comment:27 by nielx, 4 years ago

Milestone: R1R1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.