* The DPMS code tried to enable the LVDS panel already if a digital display   was detected; however, it should only do so when there is an actual LVDS panel   detected. * This should fix one part of ticket #3149 - looks like there are two different   issues. Thanks to Robert J. Gebis for providing me remote access to his   system. * Minor debug output improvements.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36941 a95241bf-73f2-0310-859d-f6bbb57e9c96